# Walking-Darwin-OP2-Gazebo

./: README.md
op2_control/: CMakeLists.txt  package.xml
op2_control/config/: op2_control.yaml
op2_control/launch/: op2_control.launch.py
op2_description/: CMakeLists.txt  package.xml
op2_description/launch/: gazebo.launch.py  op2_rviz.launch.py  world.world
op2_description/rviz/: op2.rviz
op2_description/urdf/: op2.urdf.xacro  op2.xacro  op2_control.xacro  op2_gazebo.xacro  op2_inertia.xacro
op2_launch/: CMakeLists.txt  package.xml
op2_launch/launch/: op2_launch.launch.py
op2_moveit/: CMakeLists.txt  package.xml
op2_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  op2.srdf
op2_moveit/launch/: op2_moveit.launch.py
op2_moveit/rviz/: moveit.rviz
op2_msgs/: CMakeLists.txt  package.xml
op2_rutines/: CMakeLists.txt  package.xml
op2_rutines/src/: op2_rutines.cpp
op2_sequences/: package.xml  setup.cfg  setup.py
op2_sequences/op2_sequences/: op2_sequence.py
robot_bringup/launch/: robot_bringup_gazebo.launch.py  robot_bringup_launch.py
robot_control/: CMakeLists.txt  package.xml
robot_control/config/: op2_control.yaml
robot_control/launch/: robot_control.launch.py
robot_description/: CMakeLists.txt  package.xml
robot_description/config/robotis_op2/: param_robotis_op2_joints.yaml
robot_description/models/robotis_op2/launch/: robotis_op2_gazebo.launch.py
robot_description/models/robotis_op2/urdf/: robotis_op2.gazebo.xacro  robotis_op2.inertia.xacro  robotis_op2.urdf  robotis_op2.urdf.xacro  robotis_op2_control.xacro
robot_gazebo/: package.xml  setup.py
robot_gazebo/robot_gazebo/: robot_handler.py
