<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>op2_sequences</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="fer@todo.todo">fer</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>ros2</depend>
  <depend>std_msgs</depend>
  <depend>action_msgs</depend>
  <exec_depend>rlcpy</exec_depend>
  <exec_depend>op2_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
